--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,24 @@
   text-align: center;
 }
 
+{/* BLOG */}
+
 .blog-header {
     text-align: center;
     font-weight: bolder;
-    font-size:  40px;
+    font-size:  30px;
+}
+
+.blog-ul {
+    list-style: none;
+}
+
+.blog-title {
+  text-align: center;
+}
+
+.blog-description {
+  text-align: center;
 }
 
 
