--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,26 @@
   list-style-type: none;
 }
 
-.breakfast-title, .lunch-title, .dinner-title, .snacks-title {
+.food-title {
   text-align: center;
   padding-bottom: 0.1em;
 }
 
-.breakfast-item, .lunch-item, .dinner-item, .snacks-item {
+.food-item {
   text-align: center;
   padding-bottom: 1em;
 }
 
+/* FLARE */
+
+.flare-ul {
+  list-style-type: none;
+}
+
+.flare-title, .flare-score {
+  text-align: center;
+  padding-bottom: 0.1em;
+}
 
 /*.App-header {*/
 /*  background-color: #282c34;*/
