--- a/src/App.css
+++ b/src/App.css
@@ -17,27 +17,64 @@
     font-size:  30px;
 }
 
+.diary-entry-container{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-style: solid;
+  margin-bottom: 2em;
+  width: 60%;
+  border-radius: 25px;
+   box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+ 
+
+}
+
 .blog-ul {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
+    /*padding: 2em 5em 2em 5em;*/
 }
+
+/*padding: 25px 50px 75px 100px;*/
+/*top padding is 25px*/
+/*right padding is 50px*/
+/*bottom padding is 75px*/
+/*left padding is 100px*/
 
 .blog-title {
   text-align: center;
+  padding: 2em;
+  font-weight: bold;
+  transition: 0.4s;
+}
+
+.blog-title:hover {
+  color: #ff6600;
 }
 
 .blog-description {
   text-align: center;
+  padding-bottom: 2em;
 }
 
 .diary-btn-container {
   display: flex;
   justify-content: center;
   text-align: center;
+  padding-bottom: 2em
 }
 
 .link-to-single-blog {
   text-decoration: none;
   color: black;
+}
+
+.view-diary-entry {
+  text-align: center;
+  margin-top: 2em;
 }
 
 /* AddNewBlog */
@@ -50,6 +87,32 @@
 
 .submit-thoughts-btn, .submit-thoughts-btn-container{
   text-align: center
+}
+
+/* SINGLE BLOG */
+
+.single-blog-title {
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 2em;
+  transition: 0.4s;
+}
+
+.single-blog-description {
+  text-align: center;
+  padding-bottom: 2em;
+}
+
+ .single-blog-container {
+    display: block;
+    margin: 3em auto 2em auto;
+    text-align: center;
+    border-style: solid;
+    width: 60%;
+    border-radius: 25px;
+    box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+ 
 }
 
 /* FOOD */
