--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@
   border-style: solid;
   margin-bottom: 2em;
   width: 60%;
-  border-radius: 25px;
    box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
  
 
@@ -105,7 +104,6 @@
     text-align: center;
     border-style: solid;
     width: 60%;
-    border-radius: 25px;
     box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
  
 }
@@ -141,6 +139,48 @@
 .flare-title, .flare-score {
   text-align: center;
   padding-bottom: 0.1em;
+}
+
+.flares-container {
+  display: block;
+  margin-left: 2em;
+  border-style: solid;
+  margin-bottom: 2em;
+  width: 20%;
+  box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+ 
+}
+
+.flare-scoring-title {
+  margin-left: 0.1em;
+  padding-top: 0.5em;
+  padding-left: 2em;
+}
+
+.body-li {
+  margin-bottom: 0.5em;
+}
+
+.food-container {
+  display: block;
+  text-align: right;
+  margin-left: 2em;
+  border-style: solid;
+  margin-bottom: 2em;
+  width: 50%;
+  box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+}
+
+.column_one {
+  float: left;
+  width: 33.3%;
+  
+}
+
+.column_two {
+  float: right;
+  width: 66.6%;
+  text-align: right;
 }
 
 /*.App-header {*/
