--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,29 @@
-.App {
-  text-align: center;
+/*.App {*/
+/*  text-align: center;*/
+/*  margin-bottom: 0px;*/
+  
+/*}*/
+
+/*.body {*/
+  /*background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);*/
+/* background-color: #C1D5FB;*/
+/*  margin: 0;*/
+/*  padding: 0;*/
+  
+/*}*/
+
+html{
+  margin:0;
+  padding:0;
+  max-height:100vh;
+
 }
+
+body {
+  background-color: #C1D5FB;
+  height: 100%;
+}
+
 
 /* BLOG */
 
@@ -24,8 +47,11 @@
   text-align: center;
   border-style: solid;
   margin-bottom: 2em;
+  background-color: #677EAB;
   width: 60%;
    box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+   
+   
  
 
 }
@@ -46,7 +72,7 @@
 }
 
 .blog-title:hover {
-  color: #ff6600;
+  color: #C1D5FB;
 }
 
 .blog-description {
@@ -60,6 +86,28 @@
   text-align: center;
   padding-bottom: 2em
 }
+
+
+  .create-blog-button {
+  background-color: #677EAB;  
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.4s;
+  background-size: 200% auto;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  color: black;
+
+  }
+
+  .create-blog-button:hover {
+  background-color: #9DB6E6;
+  background-position: right center; /* change the direction of the change here */
+  text-decoration: none;
+  }
+         
 
 .link-to-single-blog {
   text-decoration: none;
@@ -79,9 +127,42 @@
   text-align: center;
 }
 
-.submit-thoughts-btn, .submit-thoughts-btn-container{
+.description-box {
+  background-color: #677EAB;
+  border-style: solid;
+  box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
+
+.submit-thoughts-btn-container {
   text-align: center
 }
+
+.submit-thoughts-btn {
+  text-align: center;
+  background-color: #677EAB;  
+  margin: 10px;
+  padding: 15px 45px;
+  /*text-align: center;*/
+  /*text-transform: uppercase;*/
+  transition: 0.4s;
+  background-size: 200% auto;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  color: black;
+
+  }
+
+  .submit-thoughts-btn:hover {
+  background-color: #9DB6E6;
+  background-position: right center; /* change the direction of the change here */
+  text-decoration: none;
+  
+  }
 
 /* SINGLE BLOG */
 
@@ -104,6 +185,7 @@
     text-align: center;
     border-style: solid;
     width: 60%;
+    background-color: #9DB6E6;
     box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
  
 }
@@ -112,6 +194,22 @@
   padding: 1em;
   margin-top: 3em;
   margin-left: 3em;
+  background-color: #677EAB;  
+  margin: 10px;
+  /*padding: 15px 45px;*/
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.4s;
+  background-size: 200% auto;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  color: black;
+}
+
+.single-blog-back-btn:hover {
+  background-color: #9DB6E6;
+  background-position: right center; /* change the direction of the change here */
+  text-decoration: none;  
 }
 
 /* FOOD */
@@ -136,9 +234,14 @@
   list-style-type: none;
 }
 
-.flare-title, .flare-score {
-  text-align: center;
-  padding-bottom: 0.1em;
+.flare-title {
+  /*padding-bottom: 1em;*/
+}
+
+.flare-score {
+  /*text-align: center;*/
+  /*padding-bottom: 10em;*/
+  /*margin-bottom: 10px;*/
 }
 
 .flares-container {
@@ -171,16 +274,73 @@
   box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
 }
 
-.column_one {
-  float: left;
-  width: 33.3%;
+
+/* FLARE FORM */
+.flare-form {
+  margin-left: 0.1em;
+  border-style: solid;
+  /*padding-left: 2em;*/
+  /*float: left;*/
+  /*width: 33.3%;*/
+  text-align: center;
+  background-color: #677EAB;
   
 }
 
-.column_two {
+.form-content {
+  margin-bottom: 0.2em;
+  padding-bottom: 0.5em;
+  font-weight: bold;
+}
+
+input[type="number"] {
+  font-size: 15px;
+  padding: 0.4em;
+  margin: 0.5em 0;
+  width: 60%;
+  border-radius: 8px;
+  border: 0;
+  box-shadow: 0 0 10px 4px rgba(63, 62, 62, 0.521);
+
+}
+
+.submit-flares-btn-container {
+  text-align: center
+}
+
+.submit-flares-btn {
+  text-align: center;
+  background-color: #677EAB;  
+  margin: 1em;
+  padding: 1em 1em;
+  text-align: center;
+  background-size: 100% auto;
+  box-shadow: 0 0 10px #eee;
+  border-radius: 7px;
+  color: black;
+
+  }
+
+  .submit-flares-btn:hover {
+  background-color: #9DB6E6;
+  text-decoration: none;
+  
+  }
+
+
+.column-one {
+  margin-left: 1em;
+  /*padding-left: 1em;*/
+  float: left;
+  width: 3fr;
+}
+
+.column-two {
+  margin-right: 1em;
   float: right;
-  width: 66.6%;
+  width: 7fr;
   text-align: right;
+  
 }
 
 /*.App-header {*/
